--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-        <section>
+        <section class="main-btn-section">
         <ul class="main-btn">
         <li>
             <button class="main-btn" type="button">Все</button>
@@ -47,79 +47,78 @@
         </li>
         </ul>
         </section>
-        <section>
+        <section class="prices-section">
             <ul class="list-gallery-list">
                 <li class="gallery-item">
                     <img src="./images/img-1.jpg"
                      alt="ноутбук"
                      width="370"
                      />
-                     <h1>Технокряк</h1>
-                     <p>Веб-сайт</p>
+                     <h1 class="hero-title">Технокряк</h1>
+                     <p class="hero-after-title">Веб-сайт</p>
                     </li>
                     <li class="gallery-item">
                         <img src="./images/img-2.jpg"
                         alt="игра в баскутбол"
                         width="370"
                         />
-                        <h1>Постер New Orlean vs Golden Star</h1>
-                        <p>Дизайн</p>
-                    </li>
+                        <h1 class="hero-title" >Постер New Orlean vs Golden Star</h1>
+                        <p class="hero-after-title">Дизайн</p>
                     <li class="gallery-item">
                         <img src="./images/img-3.jpg"
                         alt="логотип ресторана"
                         width="370"
                         />
-                        <h1>Ресторан Seafood</h1>
-                        <p>Приложение</p>
-                    </li>
+                        <h1 class="hero-title">Ресторан Seafood</h1>
+                        <p class="hero-after-title">Приложение</p>
+                    </li> class="hero-title"
                     <li class="gallery-item">
                         <img src="./images/img-4.jpg"
                          alt="наушники"
                          width="370"
                          />
-                         <h1>Проект Prime</h1>
-                         <p>Маркетинг</p>
+                         <h1 class="hero-title">Проект Prime</h1>
+                         <p class="hero-after-title">Маркетинг</p>
                          </li>
                     <li class="gallery-item">
                         <img src="./images/img-5.jpg" 
                         alt="коробки"
                         width="370"
                         />
-                        <h1>Проект Boxes</h1>
-                        <p>Приложение</p>
+                        <h1 class="hero-title">Проект Boxes</h1>
+                        <p class="hero-after-title">Приложение</p>
                     </li>
                     <li class="gallery-item"> 
                         <img src="./images/img-8.jpg"
                         alt="компютер"
                         width="370"
                         />
-                        <h1 lang="en">Inspiration has no Borders</h1>
-                        <p>Веб-сайт</p>
+                        <h1 class="hero-title" lang="en">Inspiration has no Borders</h1>
+                        <p class="hero-after-title">Веб-сайт</p>
                     </li>
                     <li class="gallery-item">
                         <img src="./images/img-6.jpg"
                          alt="книга"
                          width="370"
                          />
-                         <h1>Издание Limited Edition</h1>
-                         <p>Дизайн</p>
+                         <h1 class="hero-title">Издание Limited Edition</h1>
+                         <p class="hero-after-title">Дизайн</p>
                          </li>
                          <li class="gallery-item">
                              <img src="./images/img-7.jpg"
                               alt="бирка"
                               width="370"
                               />
-                              <h1>Проект LAB</h1>
-                              <p>Маркетинг</p>
+                              <h1 class="hero-title">Проект LAB</h1>
+                              <p class="hero-after-title">Маркетинг</p>
                               </li>
                               <li class="gallery-item">
                                   <img src="./images/img-9.jpg" 
                                   alt="работа за ноутбуком"
                                   width="370"
                                   />
-                                  <h1 lang="en">Growing Business</h1>
-                                  <p>Приложение</p>
+                                  <h1 class="hero-title" lang="en">Growing Business</h1>
+                                  <p class="hero-after-title">Приложение</p>
                               </li>
                          
             </ul>
