--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
         <a href="">WebStudio</a>
         
         <ul class="list header-link">
-            <li class="header-item"><a class="list header-link" href="">Студия</a></li>
-            <li class="header-item"><a class="list header-link" href="">Портфолио</a></li>
+            <li class="header-item"><a class="list header-link" href="./index.html">Студия</a></li>
+            <li class="header-item"><a class="list header-link" href="./portfolio.html">Портфолио</a></li>
             <li class="header-item"><a class="list header-link" href="">Контакты</a></li>
         </ul>
         <a class="header-infoto" href="infoto:info@devstudio.com">info@devstudio.com</a>
