--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
 
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="">WebStudio</a>
-
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </nav>
-
-      <a href="infoto:info@devstudio.com">info@devstudio.com</a>
-
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <header class="header">
+      <a href="">WebStudio</a>
+    
+      <ul class="list header-link">
+        <li class="header-item"><a class="list header-link" href="./index.html">Студия</a></li>
+        <li class="header-item"><a class="list header-link" href="./portfolio.html">Портфолио</a></li>
+        <li class="header-item"><a class="list header-link" href="">Контакты</a></li>
+      </ul>
+      <a class="header-infoto" href="infoto:info@devstudio.com">info@devstudio.com</a>
+    
+      <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
       <section>
