--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
           <li>
             <img
-              src="./images/about-img-2.jpg"
+              src="./images/abour-img-2.jpg"
               alt="работает за ноутбуком"
               width="370"
             />
