--- a/portfolio.html
+++ b/portfolio.html
@@ -39,20 +39,20 @@
     <main>
       <section class="main-btn-section">
         <ul class="main-btn">
-          <li>
-            <button class="main-btn" type="button">Все</button>
+          <li class="main-btn">
+            <button class="main-btn"type="button">Все</button>
           </li>
           <li>
-            <button class="main-btn" type="button">Веб-сайты</button>
+            <button class="main-btn"type="button">Веб-сайты</button>
           </li>
           <li>
-            <button class="main-btn" type="button">Приложения</button>
+            <button class="main-btn"type="button">Приложения</button>
           </li>
           <li>
-            <button class="main-btn" type="button">Дизайн</button>
+            <button class="main-btn"type="button">Дизайн</button>
           </li>
           <li>
-            <button class="main-btn" type="button">Маркетинг</button>
+            <button class="main-btn"type="button">Маркетинг</button>
           </li>
         </ul>
       </section>
@@ -112,7 +112,7 @@
       </section>
     </main>
     <footer>
-      <a class="header-logo" href="">WebStudio</a>
+      <a class="footer-logo" href="">WebStudio</a>
 
       <address>
         <ul>
