--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="">WebStudio</a>
+      <a class="header-logo" href="">WebStudio</a>
     
       <ul class="list header-link">
         <li class="header-item"><a class="list header-link" href="./index.html">Студия</a></li>
@@ -22,45 +22,45 @@
       <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="main-btn-section">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button  class="main-btn" type="button">Заказать услугу</button>
       </section>
 
-      <h2>Чем мы занимаемся</h2>
-      <section>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
+      <h2 class="about-pre-title">Чем мы занимаемся</h2>
+      <section class="about section">
+        <ul class="about-list">
+          <li class="about-title">
+            <h3 class="about-title">Внимание к деталям</h3>
 
-            <p>
+            <p class="about-after-title">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
 
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="about-title">Пунктуальность</h3>
 
-            <p>
+            <p class="about-after-title">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
 
           <li>
-            <h3>Планирование</h3>
+            <h3 class="about-title">Планирование</h3>
 
-            <p>
+            <p class="about-after-title">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
 
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="about-title">Современные технологии</h3>
 
-            <p>
+            <p class="about-after-title">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -68,91 +68,98 @@
         </ul>
       </section>
 
-      <section>
-        <ul>
-          <li>
+      <section class="about section">
+        <ul class="about-list">
+          <li class="about-item">
             <img
               src="./images/about-img-1.jpg"
               alt="работает за ноутбуком"
               width="370"
+              class="about-img"
             />
           </li>
 
-          <li>
+          <li class="about-item">
             <img
               src="./images/abour-img-2.jpg"
               alt="работает за ноутбуком"
               width="370"
+               class="about-img"
             />
           </li>
 
-          <li>
+          <li class="about-item">
             <img
               src="./images/about-img-3.jpg"
               alt="работает за планшетом"
               width="370"
+               class="about-img"
             />
           </li>
         </ul>
       </section>
 
-      <h2>Наша команда</h2>
-      <section>
-        <ul>
-          <li>
+      <h2 class="masters-title">Наша команда</h2>
+      <section id="masters" class="masters">
+        <ul class="list masters-list">
+          <li class="masters-item">
             <img
               src="./images/masters-img-3.jpg"
               alt="портрет мастера"
               width="270"
+              class="masters-item-img"
             />
 
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="master-item-title">Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="masters-item">
             <img
               src="./images/masters-img-2.jpg"
               alt="портрет мастера"
               width="270"
+              class="masters-item-img"
             />
-            <h3>Ольга Репина</h3>
+            <h3 class="master-item-title">Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="masters-item">
             <img
               src="./images/masters-img-3.jpg"
               alt="портрет мастера"
               width="270"
+              class="masters-item-img"
             />
-            <h3>Ольга Репина</h3>
+            <h3 class="master-item-title">Ольга Репина</h3>
             <p lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="masters-item">
             <img
               src="./images/masters-img-4.jpg"
               alt="портрет мастера"
               width="270"
+              class="masters-item-img"
             />
 
-            <h3>Михаил Ермаков</h3>
+            <h3 class="master-item-title">Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a class="footer-logo"href="">WebStudio</a>
 
       <address>
         <ul>
-          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li class="adress"><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
 
           <li>
-            <a href="exampleto:info@example.com">info@example.com</a>
+            <a class="header-infoto" href="exampleto:info@example.com">info@example.com</a>
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="header-tel" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
