--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="">WebStudio</a>
+      <a class="header-logo" href="">Web<span>Stydio</span>
 
       <ul class="list header-link">
         <li class="header-item">
@@ -38,7 +38,7 @@
     </header>
     <main>
       <section class="main-btn-section">
-        <ul class="main-btn">
+        <ul class="main-btn list">
           <li>
             <button class="main-btn" type="button">Все</button>
           </li>
@@ -54,10 +54,8 @@
           <li>
             <button class="main-btn" type="button">Маркетинг</button>
           </li>
-        </ul>
-      </section>
-      <section class="prices-section">
-        <ul class="list-gallery-list">
+
+    
           <li class="gallery-item">
             <img src="./images/img-1.jpg" alt="ноутбук" width="370" />
             <h1 class="hero-title">Технокряк</h1>
@@ -112,10 +110,11 @@
       </section>
     </main>
     <footer>
-      <a class="footer-logo" href="">WebStudio</a>
+      <a class="footer-logo" href="">Web<span>Stydio</span>
+
 
       <address>
-        <ul>
+        <ul class="list">
           <li class="address">
             <a href="">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
@@ -132,6 +131,5 @@
       </address>
     </footer>
 
-    h
   </body>
 </html>
