--- a/index.html
+++ b/index.html
@@ -5,31 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https: //fonts.googleapis.com/css2?family= Raleway:wght@700 & family = Roboto:wght@400;500;700;900 & display=swap"
+      rel="stylesheet" />
   <link rel="stylesheet" href="./css/styles.css" />
 
   </head>
   <body>
     <header class="header">
-      <a class="header-logo" href="">WebStudio</a>
+      <a class="header-logo" href="">Web<span>Stydio</span>
     
-      <ul class="list header-link">
-        <li class="header-item"><a class="list header-link" href="./index.html">Студия</a></li>
-        <li class="header-item"><a class="list header-link" href="./portfolio.html">Портфолио</a></li>
-        <li class="header-item"><a class="list header-link" href="">Контакты</a></li>
+      <ul class="header-list list">
+        <li class="header-item"><a class="header-link" href="./index.html">Студия</a></li>
+        <li class="header-item"><a class="header-link" href="./portfolio.html">Портфолио</a></li>
+        <li class="header-item"><a class="header-link" href="">Контакты</a></li>
       </ul>
       <a class="header-infoto" href="infoto:info@devstudio.com">info@devstudio.com</a>
     
       <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-      <section class="main-btn-section">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+      <section class="main-section">
+        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
         <button  class="main-btn" type="button">Заказать услугу</button>
       </section>
 
       <h2 class="about-pre-title">Чем мы занимаемся</h2>
       <section class="about section">
-        <ul class="about-list">
+        <ul class="about-list list">
           <li class="about-title">
             <h3 class="about-title">Внимание к деталям</h3>
 
@@ -69,7 +75,7 @@
       </section>
 
       <section class="about section">
-        <ul class="about-list">
+        <ul class="about-list list">
           <li class="about-item">
             <img
               src="./images/about-img-1.jpg"
@@ -149,11 +155,13 @@
       </section>
     </main>
     <footer>
-      <a class="footer-logo"href="">WebStudio</a>
+      <a class="footer-logo"href="">Web<span>Stydio</span>
 
       <address>
-        <ul>
-          <li class="adress"><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <ul class="list">
+        <li class="address">
+          <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+        </li>
 
           <li>
             <a class="header-infoto" href="exampleto:info@example.com">info@example.com</a>
