--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https: //fonts.googleapis.com/css2?family= Raleway:wght@700 & family = Roboto:wght@400;500;700;900 & display=swap"
-      rel="stylesheet" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+  rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css" />
 
   </head>
@@ -154,20 +152,21 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer-list">
       <a class="footer-logo"href="">Web<span>Stydio</span>
 
       <address>
+        <section class="list-section">
         <ul class="list">
         <li class="address">
-          <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+          <a class="address" href="">г. Киев, пр-т Леси Украинки, 26</a>
         </li>
 
           <li>
-            <a class="header-infoto" href="exampleto:info@example.com">info@example.com</a>
+            <a class="footer-infoto" href="exampleto:info@example.com">info@example.com</a>
           </li>
           <li>
-            <a class="header-tel" href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="footer-tel" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
