--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https: //fonts.googleapis.com/css2?family= Raleway:wght@700 & family = Roboto:wght@400;500;700;900 & display=swap"
-      rel="stylesheet"
-    />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+  rel="stylesheet"> 
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -19,7 +16,7 @@
     <header class="header">
       <a class="header-logo" href="">Web<span>Stydio</span>
 
-      <ul class="list header-link">
+      <ul class="header-list list">
         <li class="header-item">
           <a class="list header-link" href="./index.html">Студия</a>
         </li>
@@ -54,47 +51,49 @@
           <li>
             <button class="main-btn" type="button">Маркетинг</button>
           </li>
+        </ul>
 
+        <ul class="gallery-list list">
     
           <li class="gallery-item">
             <img src="./images/img-1.jpg" alt="ноутбук" width="370" />
-            <h1 class="hero-title">Технокряк</h1>
+            <h3 class="hero-title">Технокряк</h3>
             <p class="hero-after-title">Веб-сайт</p>
           </li>
           <li class="gallery-item">
             <img src="./images/img-2.jpg" alt="игра в баскутбол" width="370" />
-            <h1 class="hero-title">Постер New Orlean vs Golden Star</h1>
+            <h3 class="hero-title">Постер New Orlean vs Golden Star</h3>
             <p class="hero-after-title">Дизайн</p>
           </li>
           <li class="gallery-item">
             <img src="./images/img-3.jpg" alt="логотип ресторана" width="370" />
-            <h1 class="hero-title">Ресторан Seafood</h1>
+            <h3 class="hero-title">Ресторан Seafood</h3>
             <p class="hero-after-title">Приложение</p>
           </li>
 
           <li class="gallery-item">
             <img src="./images/img-4.jpg" alt="наушники" width="370" />
-            <h1 class="hero-title">Проект Prime</h1>
+            <h3 class="hero-title">Проект Prime</h3>
             <p class="hero-after-title">Маркетинг</p>
           </li>
           <li class="gallery-item">
             <img src="./images/img-5.jpg" alt="коробки" width="370" />
-            <h1 class="hero-title">Проект Boxes</h1>
+             <h3 class="hero-title">Проект Boxes</h3>
             <p class="hero-after-title">Приложение</p>
           </li>
           <li class="gallery-item">
             <img src="./images/img-8.jpg" alt="компютер" width="370" />
-            <h1 class="hero-title" lang="en">Inspiration has no Borders</h1>
+            <h3 class="hero-title" lang="en">Inspiration has no Borders</h3>
             <p class="hero-after-title">Веб-сайт</p>
           </li>
           <li class="gallery-item">
             <img src="./images/img-6.jpg" alt="книга" width="370" />
-            <h1 class="hero-title">Издание Limited Edition</h1>
+            <h3 class="hero-title">Издание Limited Edition</h3>
             <p class="hero-after-title">Дизайн</p>
           </li>
           <li class="gallery-item">
             <img src="./images/img-7.jpg" alt="бирка" width="370" />
-            <h1 class="hero-title">Проект LAB</h1>
+            <h3 class="hero-title">Проект LAB</h3>
             <p class="hero-after-title">Маркетинг</p>
           </li>
           <li class="gallery-item">
@@ -103,31 +102,33 @@
               alt="работа за ноутбуком"
               width="370"
             />
-            <h1 class="hero-title" lang="en">Growing Business</h1>
+            <h3 class="hero-title" lang="en">Growing Business</h3>
             <p class="hero-after-title">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer-list">
       <a class="footer-logo" href="">Web<span>Stydio</span>
 
 
       <address>
+        <section class="list-section">
         <ul class="list">
           <li class="address">
-            <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+            <a class="address" href="">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
 
           <li>
-            <a class="header-infoto" href="infoto:info@devstudio.com"
+            <a class="footer-infoto" href="infoto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
+        </section>
       </address>
     </footer>
 
