--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <section class="main-section">
         <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-        <button  class="main-btn" type="button">Заказать услугу</button>
+        <button class="title-btn" type="button">Заказать услугу</button>
       </section>
 
       <h2 class="about-pre-title">Чем мы занимаемся</h2>
@@ -36,10 +36,11 @@
         <ul class="about-list list">
           <li class="about-title">
             <h3 class="about-title">Внимание к деталям</h3>
+          </li>
+          <li>
 
             <p class="about-after-title">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
 
@@ -115,7 +116,7 @@
             />
 
             <h3 class="master-item-title">Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <p class="masters" lang="en">Product Designer</p>
           </li>
           <li class="masters-item">
             <img
@@ -125,7 +126,7 @@
               class="masters-item-img"
             />
             <h3 class="master-item-title">Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <p class="masters" lang="en">Frontend Developer</p>
           </li>
 
           <li class="masters-item">
@@ -136,7 +137,7 @@
               class="masters-item-img"
             />
             <h3 class="master-item-title">Ольга Репина</h3>
-            <p lang="en">Marketing</p>
+            <p class="masters" lang="en">Marketing</p>
           </li>
           <li class="masters-item">
             <img
@@ -147,7 +148,7 @@
             />
 
             <h3 class="master-item-title">Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <p class="masters" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
